--- a/yaml/snapcraft.yaml
+++ b/yaml/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: widget-draughts # you probably want to 'snapcraft register <name>'
+name: widget-draughts 
 base: core18 # the base snap is the execution environment for this snap
-version: '1.0.0' # just for humans, typically '1.2+git' or '1.3.2'
+version: '1.0.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Widget Draughts is a computer draughts game for Linux. # 79 char long summary
 description: |
   Widget Draughts is a computer draughts game for Linux written using C++ and wxWidgets. 
