--- a/yaml/snapcraft.yaml
+++ b/yaml/snapcraft.yaml
@@ -1,14 +1,14 @@
 name: widget-draughts 
-base: core18 # the base snap is the execution environment for this snap
-version: '1.0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Widget Draughts is a computer draughts game for Linux. # 79 char long summary
+base: core18 
+version: '1.0.1' 
+summary: Widget Draughts is a computer draughts game for Linux.
 description: |
   Widget Draughts is a computer draughts game for Linux written using C++ and wxWidgets. 
   With Widget Draughts you play against the computer. The human player is black and the computer is white. 
   Upstream: https://github.com/crispinalan/widget-draughts 
 
-grade: devel # must be 'stable' to release into candidate/stable channels
-confinement: devmode # use 'strict' once you have the right plugs and slots
+grade: stable # must be 'stable' to release into candidate/stable channels
+confinement: strict # use 'strict' once you have the right plugs and slots
 
 
 apps:
@@ -16,8 +16,13 @@ apps:
     adapter: full
     command: usr/local/wxdraughts
     extensions: [gnome-3-28]
-    #command-chain:
-      #- usr/local/desktop-launch
+    plugs:
+    - x11
+    - wayland
+    - desktop
+    - desktop-legacy
+    
+    
 
 
 parts:
@@ -54,8 +59,23 @@ parts:
       - libgtk-3-dev
       - git
      
- # to do
- # wxWidgets SDK stage
- # plugs for strict
+  # The wxWidgets SDK Stage Snaps
+  # https://forum.snapcraft.io/t/the-wxwidgets-sdk-stage-snaps/10877
+  wxwidgets-sdk:
+    plugin: nil
+    stage-snaps:
+    - wxwidgets-sdk-gtk3
+    stage-packages:
+    # Crash dialog support
+    - binutils
+    filesets:
+      crash-dialog-support:
+      - usr/bin/*addr2line
+      library-shared:
+      - '**/lib/**/*.so*'
+    prime:
+    - $crash-dialog-support
+    - $library-shared
+    
 
 
