minor point release of widget draughts 1.1.0
This commit is a cleanup of the code base

- human player is white
- alpha-beta removed
- code restructured to add future features

 On branch master

 Changes to be committed:
	modified:   README.md
	modified:   src/CMakeLists.txt
	modified:   src/draughts.cpp
	modified:   src/draughts.h
	modified:   src/mainwindow.cpp
	modified:   src/mainwindow.h
	deleted:    src/movepiece.cpp
	deleted:    src/movepiece.h
	modified:   widget-draughts.png

 Untracked files:
	src/board.cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,7 @@ add_executable(
     draughts.h
     mainwindow.cpp
     mainwindow.h
-    movepiece.cpp
-    movepiece.h
+    board.cpp   
     )
 
 target_link_libraries(
